--- a/templates/base.html
+++ b/templates/base.html
@@ -548,7 +548,7 @@
                                             <i class="icofont-heart"></i>
                                             <span>add to wish</span>
                                         </a>
-                                        <a class="view-compare" href="compare.html" title="Compare This Item">
+                                        <a class="view-compare" href="#" title="Compare This Item">
                                             <i class="fas fa-random"></i>
                                             <span>Compare This</span>
                                         </a>
