--- a/product/templates/product/product_detail.html
+++ b/product/templates/product/product_detail.html
@@ -154,11 +154,22 @@
                                     </div>
                                     
                                     <div class="col-lg-12">
+                                        {% if user.is_authenticated %}
                                         <button type="submit" class="btn btn-inline">
                                             <i class="icofont-water-drop"></i>
                                             <span>drop your review</span>
                                         </button>
+                                        {% else %}
+                                        <p>You must be Login first.<a href="{% url 'login' %}?next={{ request.path }}">Login here</a></p>
+                                        {% endif %}
                                     </div>
+
+                                    
+                                       
+                                            
+                                       
+                                   
+                                    
                                 </div>
                             </form>
                         </div>
