successfully integrated mpesa

--- a/orders/templates/orders/order_summary.html
+++ b/orders/templates/orders/order_summary.html
@@ -58,7 +58,7 @@
 
                         <div class="actions">
                            
-                            <a href="{% url 'orders:mpesa_payment' order_id=order.id %}" class="btn btn-inline">Pay with M-Pesa</a>
+                            <a href="{% url 'orders:mpesa_initiate_payment' order_id=order.id %}" class="btn btn-inline">Pay with M-Pesa</a>
 
                         </div>
                         
