--- a/orders/templates/orders/mpesa_payment_failed.html
+++ b/orders/templates/orders/mpesa_payment_failed.html
@@ -7,5 +7,6 @@
 <body>
     <h1>Payment Failed</h1>
     <p>Unfortunately, your payment was not successful. Please try again later.</p>
+    <a href="/"> Return Home and retry</a>
 </body>
 </html>
