made new changes

--- a/templates/base.html
+++ b/templates/base.html
@@ -160,7 +160,7 @@
                     </form>
 
                     <div class="header-widget-group">
-                        <a href="wishlist.html" class="header-widget" title="Wishlist">
+                        <a href="#" class="header-widget" title="Wishlist">
                             <i class="fas fa-heart"></i>
                             <sup>0</sup>
                         </a>
