--- a/templates/base.html
+++ b/templates/base.html
@@ -81,8 +81,10 @@
                             <p>Welcome to Yuvaa Fashonna  Your Dream Online Store!</p>
                         </div>
                     </div>
+                   
                     <div class="col-md-5 col-lg-3">
                         <div class="header-top-select">
+                             {% comment %}
                             <div class="header-select">
                                 <i class="icofont-world"></i>
 
@@ -103,9 +105,10 @@
 
 
                             </div>
-                            
+                            {% endcomment %}
                         </div>
                     </div>
+                    
                     <div class="col-md-7 col-lg-4">
                         <ul class="header-top-list">
                             <li><a href="#">offers</a></li>
